# xanite

./: AndroidManifest.xml  Game.md  OpenGL ES 3.0.cpp  README.md  Red.md  Xanite original.txt  Xanite-version-macro.h  Xanite-version.rc  Xemu.txt  build.gradle  gradle.properties  input_jostick.h  local.properties  output-metadata.json  settings.gradle
C++/: Dream  Emulator.cpp  Emulator.h  LOAD_LIB.cpp  Logs.cpp  Logs_lib.cpp  OpenGL ES 3.0.cpp  PCIBus.h  PCIDevice.h  Xanite-lib.cpp  Xanite_xbox.cpp  Xemu-lib.cpp  Xemu.txt  bios.cpp  bios_lib.cpp  dream  load_lib.cpp  main.c  mik_lib.cpp  mine_lib.cpp  nat-lib.cpp  nati_lib.cpp  nativ-lib.cpp  nativ_lib.cpp  native-lib.cpp  run_lib.cpp  www_lib.cpp  xanite-lib.cpp  xanite_og.cpp  xbox.h
Java/: BiosActivity.java  Emulator.java  FileUtils.java  GameAdapter.java  GameDisplayActivity.java  GamePlayActivity.java  GamePlayViewModel.java  GameRenderer.java  GameRunActivity.java  GameSelectionActivity.java  GameViewModel.java  InfoActivity.java  K  LogHelper.java  MainActivity.java  MyApplication.java  ShowGameActivity.java  SystemActivity.java  VirtualJoystick.java  💔
Vulkan/: vulkan.h  vulkan_android.h  vulkan_wrapper.cpp  vulkan_wrapper.h
app/: AndroidManifest.xml  build.gradle  output-metadata.json
app/Assets/: Xbox360
app/assets/: Xbox360
app/assets/Bios/: Xbox360.txt
app/src/Main/Cpp/: CMakeLists.txt  libadrenotools @ 8fae8ce  memory_allocator.cpp  memory_allocator.h  native-lib.cpp  nv2a_renderer.cpp  nv2a_renderer.h  x86_core.cpp  x86_core.h  xbox_emulator.cpp  xbox_emulator.h  xbox_iso_parser.cpp  xbox_iso_parser.h  xbox_kernel.cpp  xbox_kernel.h  xbox_memory.cpp  xbox_memory.h  xbox_utils.cpp  xbox_utils.h
app/src/Main/java/net/Xanite/: Digital1Flags.kt  Digital2Flags.kt  MainActivity.kt  XaniteApplication.kt
app/src/Main/java/net/Xanite/cdio/: cdio.h  device.h  disc.c  driver.h  driver_return_code.h  ds.h  xa.h
app/src/Main/java/net/Xanite/overlay/: OverlayEditActivity.kt  PadOverlay.kt  PadOverlayButton.kt  PadOverlayStick.kt
app/src/Main/java/net/Xanite/ui/models/: Bios.kt  (+2 more)
app/src/Main/res/Layout/: activity_file_manager.xml  activity_main.xml  item_file.xml
app/src/Main/res/drawable/: ic_settings.xml
app/src/androidTest/java/net/Xanite/: ExampleInstrumentedTest.kt
app/src/test/java/net/Xanite/: ExampleUnitTest.kt
assets/: fragment_shader.glsl  vertex_shader.glsl
gradle/: libs.versions.toml
include/cdio/: disc.h  iso9660.h  limits.h  read.h  rock.h  rockridge.h  stdint.h
jniLibs/arm64-v8a/: libGL.so.1  libiso9660.so.12
nitro_frontend/gs/: texture_view.rs
(+61 files in other folders)
